<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ResultActivity"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img"
            android:layout_width="@dimen/img_width"
            android:layout_height="@dimen/img_height"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:src="@drawable/q" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/sep_height"
            android:layout_marginTop="@dimen/padding_top"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/llResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_right"
                android:textColor="@color/primary_text"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/finish_msg"
                android:paddingLeft="@dimen/padding_right"
                android:textSize="@dimen/text_font" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llResultsTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_right"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_font" />

            <TextView
                android:id="@+id/tvResultName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin5"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_font" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/sep_height"
            android:layout_marginTop="@dimen/padding_top"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/mark_font"
                android:paddingLeft="@dimen/padding_right"
                android:text="@string/qu1" />

            <TextView
                android:id="@+id/tvq1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_right"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/mark_font" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/mark_font"
                android:paddingLeft="@dimen/padding_right"
                android:text="@string/qu2" />

            <TextView
                android:id="@+id/tvq2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_right"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/mark_font" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/mark_font"
                android:paddingLeft="@dimen/padding_right"
                android:text="@string/qu3" />

            <TextView
                android:id="@+id/tvq3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_right"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/mark_font" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/mark_font"
                android:paddingLeft="@dimen/padding_right"
                android:text="@string/qu4" />

            <TextView
                android:id="@+id/tvq4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_right"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/mark_font" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:paddingLeft="@dimen/padding_right"
                android:textSize="@dimen/mark_font"
                android:text="@string/qu5" />

            <TextView
                android:id="@+id/tvq5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_right"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/mark_font" />
        </LinearLayout>




    </LinearLayout>
</ScrollView>